WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110627
[BlackBerry] Force form submission when implicit submission fails.
https://bugs.webkit.org/show_bug.cgi?id=110627
Summary
[BlackBerry] Force form submission when implicit submission fails.
Mike Fenton
Reported
2013-02-22 10:56:11 PST
SSIA.
Attachments
Patch
(2.46 KB, patch)
2013-02-22 11:16 PST
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2013-02-22 11:16:30 PST
Created
attachment 189796
[details]
Patch
Rob Buis
Comment 2
2013-02-22 11:21:20 PST
Comment on
attachment 189796
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2013-02-22 13:57:48 PST
Comment on
attachment 189796
[details]
Patch Rejecting
attachment 189796
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 189796, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Full output:
http://queues.webkit.org/results/16712221
WebKit Review Bot
Comment 4
2013-02-25 10:12:42 PST
Comment on
attachment 189796
[details]
Patch Clearing flags on attachment: 189796 Committed
r143942
: <
http://trac.webkit.org/changeset/143942
>
WebKit Review Bot
Comment 5
2013-02-25 10:12:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug