[BlackBerry] Force form submission when implicit submission fails. https://bugs.webkit.org/show_bug.cgi?id=110627

Reviewed by Rob Buis.

PR 286023.

When implicit form submission does not submit the form
do a direct submission of the form.

Reviewed Internally by Nima Ghanavatian.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::updateFormState):


Canonical link: https://commits.webkit.org/129052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143942 268f45cc-cd09-0410-ab3c-d52691b4dbfc